--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav a {
+  margin-right: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  outline: none;
+}
+
+.active {
+  color: red;
+}
